--- a/resources/frontend/band-blog-frontend/src/app/createEditPosts/post-form/post-form.component.html
+++ b/resources/frontend/band-blog-frontend/src/app/createEditPosts/post-form/post-form.component.html
@@ -1,1 +1,20 @@
-<p>crear y edita posts!</p>
+<form [formGroup]="postForm" (ngSubmit)="onSubmit()">
+      <mat-form-field>
+        <mat-label>Title</mat-label>
+        <input matInput formControlName="title">
+        <mat-error *ngIf="postForm.get('title')?.hasError('required')">
+          Title is required
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Content</mat-label>
+        <textarea matInput formControlName="content"></textarea>
+        <mat-error *ngIf="postForm.get('content')?.hasError('required')">
+          Content is required
+        </mat-error>
+      </mat-form-field>
+      <input type="file" (change)="onFileSelect($event)" accept="image/*">
+      <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
+        Create Post
+      </button>
+    </form>
