--- a/resources/frontend/band-blog-frontend/src/app/listingPosts/post-list/post-list.component.html
+++ b/resources/frontend/band-blog-frontend/src/app/listingPosts/post-list/post-list.component.html
@@ -1,1 +1,12 @@
-<p>lista para posts</p>
+<p>listado de posts</p>
+<mat-card *ngFor="let post of posts">
+      <mat-card-header>
+        <mat-card-title>{{ post.title }}</mat-card-title>
+      </mat-card-header>
+      <img *ngIf="post.image" mat-card-image [src]="post.image" alt="Post image">
+      <mat-card-content>{{ post.content }}</mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary">Edit</button>
+        <button mat-button color="warn">Delete</button>
+      </mat-card-actions>
+</mat-card>
