--- a/resources/frontend/band-blog-frontend/src/app/createEditPosts/post-form/post-form.component.css
+++ b/resources/frontend/band-blog-frontend/src/app/createEditPosts/post-form/post-form.component.css
@@ -1,29 +1,35 @@
-.post-form {
+.div_title{
   display: flex;
   flex-direction: column;
   gap: 16px; /* Space between fields */
   padding: 16px;
-  max-width: 200px; /* Optional: Limit width for better look */
+  max-width: 500px; /* Optional: Limit width for better look */
   margin: 0 auto; /* Center the form */
 }
 
-mat-form-field {
-  width: 100%; /* Ensure fields take full width of container */
+.div_body{
+  display: flex;
+  flex-direction: column;
+  gap: 16px; /* Space between fields */
+  padding: 16px;
+  max-width: 500px; /* Optional: Limit width for better look */
+  margin: 0 auto; /* Center the form */
 }
 
-.submit-button {
-  margin-top: 16px; /* Space above the button */
+.div_submit{
+  display: flex;
+  flex-direction: column;
+  gap: 16px; /* Space between fields */
+  padding: 16px;
+  max-width: 250px; /* Optional: Limit width for better look */
+  margin: 0 auto; /* Center the form */
 }
 
-input[type="file"] {
-  padding: 8px; /* Match Material input padding */
-  border: 1px solid #ccc; /* Basic border for consistency */
-  border-radius: 4px; /* Rounded corners */
-  gap: 16px;   
-  
-}
-
-mat-error {
-  font-size: 12px; /* Smaller error text */
-  color: #f44336; /* Material red for errors */
+.div_lista{
+  display: flex;
+  flex-direction: column;
+  gap: 16px; /* Space between fields */
+  padding: 100px;
+  max-width: 250px; /* Optional: Limit width for better look */
+  margin:0%; /* Center the form */
 }
