--- a/resources/frontend/band-blog-frontend/src/app/createEditPosts/post-form/post-form.component.html
+++ b/resources/frontend/band-blog-frontend/src/app/createEditPosts/post-form/post-form.component.html
@@ -1,20 +1,36 @@
-<form [formGroup]="postForm" (ngSubmit)="onSubmit()">
+<div>
+  <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
+    <div class="div_title">
       <mat-form-field>
-        <mat-label>Title</mat-label>
+        <mat-label>Titulo</mat-label>
         <input matInput formControlName="title">
         <mat-error *ngIf="postForm.get('title')?.hasError('required')">
-          Title is required
+          debes escribir un titulo
         </mat-error>
       </mat-form-field>
+    </div>
+    <div class="div_body">
       <mat-form-field>
-        <mat-label>Content</mat-label>
+        <mat-label>Contenido</mat-label>
         <textarea matInput formControlName="content"></textarea>
         <mat-error *ngIf="postForm.get('content')?.hasError('required')">
-          Content is required
+          este campo no puede ir vacio
         </mat-error>
       </mat-form-field>
+    </div>
+
+    <div class="div_submit">
       <input type="file" (change)="onFileSelect($event)" accept="image/*">
       <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
-        Create Post
+        Crear Post
       </button>
-    </form>
+    </div>
+    
+    <div class="div_lista">
+      <button mat-raised-button color="primary" (click)="navigateToLists()">
+        Lista de Posts
+      </button>
+    </div> 
+  </form>
+</div>
+
