--- a/resources/frontend/band-blog-frontend/src/app/listingPosts/post-list/post-list.component.html
+++ b/resources/frontend/band-blog-frontend/src/app/listingPosts/post-list/post-list.component.html
@@ -7,6 +7,12 @@
       <mat-card-content>{{ post.content }}</mat-card-content>
       <mat-card-actions>
         <button mat-button color="primary">Edit</button>
-        <button mat-button color="warn">Delete</button>
+        <button mat-button color="warn" (click)="eliminar(post)">Delete</button>
       </mat-card-actions>
 </mat-card>
+        
+    <div class="div_regresar">
+      <button mat-raised-button color="primary" (click)="navigateToHome()">
+        Regresar
+      </button>
+    </div>         
